--- a/HealthCareInfromationSystem.csproj
+++ b/HealthCareInfromationSystem.csproj
@@ -274,6 +274,12 @@
     <Compile Include="view\PatientView\PatientMainForm.Designer.cs">
       <DependentUpon>PatientMainForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="view\PatientView\PollHospitalForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="view\PatientView\PollHospitalForm.Designer.cs">
+      <DependentUpon>PollHospitalForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="view\PatientView\PriorityAppointmentForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -411,6 +417,9 @@
     <EmbeddedResource Include="view\PatientView\AppointmentForm.resx" />
     <EmbeddedResource Include="view\PatientView\PatientMainForm.resx">
       <DependentUpon>PatientMainForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="view\PatientView\PollHospitalForm.resx">
+      <DependentUpon>PollHospitalForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="view\PatientView\PriorityAppointmentForm.resx" />
     <EmbeddedResource Include="view\PatientView\SearchDoctorForm.resx">
