--- a/HealthCareInfromationSystem.csproj
+++ b/HealthCareInfromationSystem.csproj
@@ -53,10 +53,9 @@
   <ItemGroup>
     <Compile Include="contollers\AppointmentController.cs" />
     <Compile Include="contollers\AppointmentRequestController.cs" />
-    <Compile Include="contollers\EquipmentRequestController.cs" />
-    <Compile Include="contollers\EquipmentController.cs" />
-    <Compile Include="contollers\MedicalPrescriptionController.cs" />
-    <Compile Include="contollers\MedicalRecordController.cs" />
+    <Compile Include="Core\EquipmentRequest\EquipmentRequestController.cs" />
+    <Compile Include="Core\Equipment\EquipmentController.cs" />
+    <Compile Include="Core\MedicalPrescription\MedicalPrescriptionController.cs" />
     <Compile Include="contollers\MedicineController.cs" />
     <Compile Include="contollers\NotificationController.cs" />
     <Compile Include="contollers\PatientController.cs" />
@@ -67,18 +66,18 @@
     <Compile Include="contollers\RenovationController.cs" />
     <Compile Include="doctorController\AppointmentController.cs" />
     <Compile Include="doctorController\EquipmentController.cs" />
-    <Compile Include="doctorController\MedicalRecordController.cs" />
-    <Compile Include="doctorController\MedicineRequestController.cs" />
+    <Compile Include="Core\MedicalRecord\MedicalRecordController.cs" />
+    <Compile Include="Core\MedicineManagment\MedicineRequestController.cs" />
     <Compile Include="models\entity\Appointment.cs" />
-    <Compile Include="models\entity\AppointmentRequest.cs" />
+    <Compile Include="Core\AppointmentRequest\AppointmentRequest.cs" />
     <Compile Include="models\entity\ComplexMoving.cs" />
     <Compile Include="models\entity\ComplexRenovation.cs" />
     <Compile Include="models\entity\PollDoctor.cs" />
-    <Compile Include="models\entity\Equipment.cs" />
-    <Compile Include="models\entity\EquipmentRequest.cs" />
-    <Compile Include="models\entity\MedicalPrescription.cs" />
-    <Compile Include="models\entity\MedicalRecord.cs" />
-    <Compile Include="models\entity\Medicine.cs" />
+    <Compile Include="Core\Equipment\Equipment.cs" />
+    <Compile Include="Core\EquipmentRequest\EquipmentRequest.cs" />
+    <Compile Include="Core\MedicalPrescription\MedicalPrescription.cs" />
+    <Compile Include="Core\MedicalRecord\MedicalRecord.cs" />
+    <Compile Include="Core\MedicineManagment\Medicine.cs" />
     <Compile Include="models\entity\Premise.cs" />
     <Compile Include="models\entity\ReferralLetter.cs" />
     <Compile Include="models\entity\SimpleRenovation.cs" />
@@ -90,40 +89,40 @@
     <Compile Include="obj\Debug\.NETFramework,Version=v4.7.2.AssemblyAttributes.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="repository\AppointmentRequestSQL.cs" />
+    <Compile Include="Core\AppointmentRequest\AppointmentRequestSQL.cs" />
     <Compile Include="repository\AppointmentSQL.cs" />
     <Compile Include="repository\EquipmentRequestSQL.cs" />
-    <Compile Include="repository\EquipmentSQL.cs" />
+    <Compile Include="Core\Equipment\EquipmentSQL.cs" />
     <Compile Include="repository\IAppointmentRepo.cs" />
-    <Compile Include="repository\IAppointmentRequestRepo.cs" />
-    <Compile Include="repository\IEquipmentRepo.cs" />
+    <Compile Include="Core\AppointmentRequest\IAppointmentRequestRepo.cs" />
+    <Compile Include="Core\Equipment\IEquipmentRepo.cs" />
     <Compile Include="repository\IEquipmentRequestRepo.cs" />
-    <Compile Include="repository\IMedicalRecordRepo.cs" />
-    <Compile Include="repository\IMedicineRepo.cs" />
+    <Compile Include="Core\MedicalRecord\IMedicalRecordRepo.cs" />
+    <Compile Include="Core\MedicineManagment\IMedicineRepo.cs" />
     <Compile Include="repository\IPersonRepo.cs" />
     <Compile Include="repository\IPollHospitalRepo.cs" />
     <Compile Include="repository\IPremisseRepo.cs" />
-    <Compile Include="repository\IPrescriptionRepo.cs" />
+    <Compile Include="Core\MedicalPrescription\IPrescriptionRepo.cs" />
     <Compile Include="repository\IReferralLetterRepo.cs" />
     <Compile Include="repository\ISpecialisationRepo.cs" />
-    <Compile Include="repository\MedicalRecordSQL.cs" />
-    <Compile Include="repository\MedicineSQL.cs" />
+    <Compile Include="Core\MedicalRecord\MedicalRecordSQL.cs" />
+    <Compile Include="Core\MedicineManagment\MedicineSQL.cs" />
     <Compile Include="repository\PersonSQL.cs" />
     <Compile Include="repository\PollHospitalSQL.cs" />
     <Compile Include="repository\PremisseSQL.cs" />
-    <Compile Include="repository\PrescriptionSQL.cs" />
+    <Compile Include="Core\MedicalPrescription\PrescriptionSQL.cs" />
     <Compile Include="repository\ReferralLetterSQL.cs" />
     <Compile Include="repository\SpecialisationSQL.cs" />
     <Compile Include="repository\PollDoctorSQL.cs" />
     <Compile Include="repository\users\IPatientRepo.cs" />
     <Compile Include="repository\IPollDoctorRepo.cs" />
     <Compile Include="repository\users\PatientSQL.cs" />
-    <Compile Include="Servise\AppointmentRequestService.cs" />
+    <Compile Include="Core\AppointmentRequest\AppointmentRequestService.cs" />
     <Compile Include="Servise\AppointmentService.cs" />
-    <Compile Include="Servise\EquipmentRequestService.cs" />
-    <Compile Include="Servise\EquipmentService.cs" />
-    <Compile Include="Servise\MedicalRecordService.cs" />
-    <Compile Include="Servise\MedicineRequestService.cs" />
+    <Compile Include="Core\EquipmentRequest\EquipmentRequestService.cs" />
+    <Compile Include="Core\Equipment\EquipmentService.cs" />
+    <Compile Include="Core\MedicalRecord\MedicalRecordService.cs" />
+    <Compile Include="Core\MedicineManagment\MedicineRequestService.cs" />
     <Compile Include="Servise\PatientService.cs" />
     <Compile Include="Servise\PollService.cs" />
     <Compile Include="Servise\ReferralLetterService.cs" />
@@ -459,6 +458,13 @@
       <DependentUpon>SecretaryMainForm.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="contollers\.gitkeep" />
+    <None Include="Core\Appointment\.gitkeep" />
+    <None Include="Core\Patient\.gitkeep" />
+    <None Include="Core\Poll\.gitkeep" />
+    <None Include="Core\Premise\.gitkeep" />
+    <None Include="Core\ReferralLetter\.gitkeep" />
+    <None Include="Core\Renovation\.gitkeep" />
+    <None Include="Core\VacationRequest\.gitkeep" />
     <None Include="models\entity\.gitkeep" />
     <None Include="models\users\.gitkeep" />
     <None Include="obj\Debug\DesignTimeResolveAssemblyReferencesInput.cache" />
