--- a/HealthCareInfromationSystem.csproj
+++ b/HealthCareInfromationSystem.csproj
@@ -57,6 +57,7 @@
     <Compile Include="Core\MedicalRecord\MedicalPrescription\MedicalPrescriptionController.cs" />
     <Compile Include="Core\MedicineManagment\MedicineController.cs" />
     <Compile Include="Core\Appointment\Notification\NotificationController.cs" />
+    <Compile Include="Core\PremiseManagment\PremiseService.cs" />
     <Compile Include="Core\User\Patient\PatientController.cs" />
     <Compile Include="Core\User\PersonController.cs" />
     <Compile Include="Core\PremiseManagment\PremiseController.cs" />
