--- a/HealthCareInfromationSystem.csproj
+++ b/HealthCareInfromationSystem.csproj
@@ -237,6 +237,12 @@
     <Compile Include="view\ManagerView\MedicineManagementForm.Designer.cs">
       <DependentUpon>MedicineManagementForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="view\ManagerView\PollHospitalStatisticsForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="view\ManagerView\PollHospitalStatisticsForm.Designer.cs">
+      <DependentUpon>PollHospitalStatisticsForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="view\ManagerView\PremisesCRUDForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -402,6 +408,9 @@
     <EmbeddedResource Include="view\ManagerView\MedicineManagementForm.resx">
       <DependentUpon>MedicineManagementForm.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="view\ManagerView\PollHospitalStatisticsForm.resx">
+      <DependentUpon>PollHospitalStatisticsForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="view\ManagerView\PremisesCRUDForm.resx">
       <DependentUpon>PremisesCRUDForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -459,8 +468,6 @@
     <EmbeddedResource Include="view\SecretaryView\SecretaryMainForm.resx">
       <DependentUpon>SecretaryMainForm.cs</DependentUpon>
     </EmbeddedResource>
-    <None Include="Core\User\Poll\.gitkeep" />
-    <None Include="Core\MedicalRecord\ReferralLetter\.gitkeep" />
     <None Include="Core\Appointment\VacationRequest\.gitkeep" />
     <None Include="obj\Debug\DesignTimeResolveAssemblyReferencesInput.cache" />
     <None Include="obj\Debug\HealthCareInfromationSystem.csproj.AssemblyReference.cache" />
@@ -474,11 +481,12 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
-    <None Include="view\.gitkeep" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Core\User\Poll\statistics\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
