--- a/HealthCareInfromationSystem.csproj
+++ b/HealthCareInfromationSystem.csproj
@@ -362,6 +362,12 @@
     <Compile Include="view\SecretaryView\SecretaryMainForm.Designer.cs">
       <DependentUpon>SecretaryMainForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="view\SecretaryView\VacationRequestForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="view\SecretaryView\VacationRequestForm.Designer.cs">
+      <DependentUpon>VacationRequestForm.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -463,6 +469,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="view\SecretaryView\SecretaryMainForm.resx">
       <DependentUpon>SecretaryMainForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="view\SecretaryView\VacationRequestForm.resx">
+      <DependentUpon>VacationRequestForm.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="Core\User\Poll\.gitkeep" />
     <None Include="Core\MedicalRecord\ReferralLetter\.gitkeep" />
